# 260118_work-life-time-tracker

./: README.md  pyproject.toml  requirements.txt
app/: database.py  main.py
app/api/: __init__.py
app/models/: __init__.py
app/schemas/: __init__.py
app/services/: __init__.py
app/static/js/: analysis.js  records.js  timer.js
app/templates/: analysis.html  base.html  index.html  records.html
